fix(content-toggle): collapse, font and button color

--- a/express/blocks/content-toggle/content-toggle.css
+++ b/express/blocks/content-toggle/content-toggle.css
@@ -1,6 +1,11 @@
+main .content-toggle-wrapper {
+    margin: 0 auto;
+    padding: 0!important;
+}
+
 main .content-toggle {
     display: inline-block;
-    background-color: var(--color-gray-200);
+    background-color: #EDEDED;
     border-radius: 25px;
     padding: 6px;
 }
@@ -10,13 +15,14 @@ main .content-toggle button {
     display: inline-block;
     border-radius: 25px;
     padding: 10px 18px;
-    font-size: 14px;
+    font-size: 13px;
     font-weight: 600;
     margin: 0 5px;
     transition: .2s background-color ease;
     cursor: pointer;
     user-select: none;
     border: none;
+    font-family: var(--body-font-family);
 }
 
 main .content-toggle button:hover {
@@ -28,9 +34,9 @@ main .content-toggle button.active {
 }
 
 main .content-toggle button:first-child {
-    margin: 0 5px 0 0;
+    margin: 0 3px 0 0;
 }
 
 main .content-toggle button:last-child {
-    margin: 0 0 0 5px;
+    margin: 0 0 0 3px;
 }
